tests/Casm/negative/test005.casm
-- Invalid register use

start:
  [ap] = fp
